syntax = "proto2";

package sf.solana.transactions.v1;

message Output {
  repeated TransactionStats data = 1;
}

message TransactionStats {
  required uint32 block_slot = 1;
  required string block_date = 2;
  required string block_time = 3;
  required uint32 index = 4;
  required uint64 fee = 5;
  required Error error = 6;
  required uint32 required_signatures = 7;
  required uint32 readonly_signed_accounts = 8;
  required uint32 readonly_unsigned_accounts = 9;
  required string id = 10;
  required bool success = 11;
  repeated Instruction instructions = 14;
  repeated string account_keys = 15;
  required string log_messages = 16; // correct this
  repeated int64 pre_balances = 17;
  repeated int64 post_balances = 18;
  repeated TokenBalance pre_token_balances = 19;
  repeated TokenBalance post_token_balances = 20;
  repeated string signatures = 21;
  required string signer = 22;
  required string version = 23;
  repeated string executing_accounts = 24;
  required uint32 base_fee = 25;
  required uint32 priority_fee = 26;
  required uint32 compute_units_consumed = 27;
  required uint32 compute_units_allocated = 28;
  required uint64 byte_size = 29;
 
}


message Error {
  required uint32 instruction_index = 1;
  required string message = 2;
}

message Instruction {
  repeated string account_arguments = 1;
  required string data = 2;
  required string executing_account = 3;
  repeated InnerInstruction inner_instructions = 4;
  required string bytes = 5;
  required string account_bytes = 6;
  required string data_bytes = 7;

}

message InnerInstruction {
   repeated string account_arguments = 1;
   required string data = 2;
   required string executing_account = 3;
   
}

message TokenBalance {
  required string account = 1;
  required int64 amount = 2;
  required string mint = 3;
  required string owner = 4;

}


